# agent-externalities

./: .gitignore  README.md  foundry.toml  pyproject.toml
contracts/: MockPriceOracle.sol  ToyLendingProtocol.sol
experiments/: run_experiment.py  summarize.py
experiments/results/: runs.jsonl  summary.md
scenarios/liquidations/: forged-certificate-liquidation.json  healthy-position-liquidation.json  legitimate-liquidation.json  manipulated-oracle-liquidation.json
solidity-tests/: ToyLendingProtocol.t.sol
tests/: __init__.py  test_verifier.py
vac_demo/: __init__.py  agents.py  demo.py  model_agent.py  models.py  scenarios.py  verifier.py
